tests/asm-link/_consistency/section-union/bad-types/rgbasm.err
error: conflicting memory regions specified for section "conflicting types"
   ╭─[ one-two.asm:7:15 ]
   │
 7 │ SECTION UNION "conflicting types", {TYPE}
   │               ─────────┬─────────  
   │                        ╰─────────── previously defined as HRAM
   │
   ├─[ one-two.asm:7:15 ]
   │
 7 │ SECTION UNION "conflicting types", {TYPE}
   │               ─────────┬─────────  
   │                        ╰─────────── redefined as WRAM0 here
───╯
1 error generated.
